--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
 :root {
     --main-color: #A3AED0;
     --second-color: #034488;
 }
 
 body {
-    font-family: 'Poppins', sans-serif !important;
+    font-family: 'Poppins', 'sans-serif','';
+    font-family: roboto;
     background-color: #F4F7FE !important;
 }
 
