--- a/src/pages/Leaves/leaves.css
+++ b/src/pages/Leaves/leaves.css
@@ -1,7 +1,7 @@
 .leaves-container{
     background-color: white;
     margin-top: 1.5rem;
-    height: 80vh;
+    height: 100%;
     border-radius: 20px;
     box-shadow:1px 1px #e3d5d5;
     width: 100%;
