--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    font-family: 'Poppins', 'sans-serif','';
+    font-family: 'Poppins', 'sans-serif','roboto';
     font-family: roboto;
     background-color: #F4F7FE !important;
 }
