--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -25,9 +25,10 @@
     display: flex;
 }
 .Projects-search-input {
-    padding: 9px 250px 10px 16px;
+    padding: 9px 235px 10px 16px;
     margin-top: 1.2rem;
-    margin-left: 4rem;
+    margin-left: 2rem;
+    width: 100%;
     border-radius: 16px;
     outline: none;
     border: none;
@@ -42,6 +43,7 @@
     border: 1px solid var(--second-color);
     color: var(--second-color);
     margin-top: 1.5rem;
+    margin-left: 2rem;
 }
 .projects-card{
     background-color: rgba(217, 217, 217, 0.2);
@@ -78,7 +80,7 @@
     text-align:center;
     background:rgba(3, 68, 136, 0.5);
     color:white;
-    width:35px;
+    width:100%;
     height:24px;
     border-radius: 5px;
 }
@@ -88,7 +90,7 @@
     text-align:center;
     background:rgba(3, 198, 85, 1);
     color:white;
-    width:35px;
+    width:100%;
     height:24px;
     border-radius: 5px;
 }
