--- a/src/components/payroll-chart/chart.css
+++ b/src/components/payroll-chart/chart.css
@@ -7,12 +7,16 @@
 }
 .payroll{
     /* padding: 20px 10px; */
+    /* overflow: auto; */
+    /* overflow: hidden; */
 }
 .payroll-chart{
     /* width: 700px; */
     background-color: #fff;
     border-radius: 16px;
     box-shadow: 0px 2px 10px 0px #0000001A;
+    overflow-x: auto;
+
     
 }
 .payroll-data{
@@ -60,3 +64,22 @@
 .icon-payroll{
     font-size: 10px;
 }
+.payroll-piechart{
+    width: 300px;
+     /* height: 300px ; */
+     background:#fff;
+     margin:0 20px;
+     border-radius:16px;
+     box-shadow: 0px 2px 10px 0px #0000001A;
+     overflow: hidden;
+}
+
+@media(max-width:768px){
+.payroll-piechart{
+    margin-top:45px ;
+    /* width: 100%; */
+
+}
+}
+
+
