updated on sidebar and navbar
updated on sidebar and navbar

--- a/src/components/Root/root.css
+++ b/src/components/Root/root.css
@@ -12,7 +12,7 @@
 .sidebar {
     background: #fff;
     /*color: #A3AED0;*/
-    height: 100vh;
+    height: inherit;
     width: 250px;
     text-align: center;
     transition: all 0.5s;
