--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -3,7 +3,7 @@
     border-radius: 20px;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     padding: 25px 20px;
 }
 
