--- a/src/components/payroll-chart/chart.css
+++ b/src/components/payroll-chart/chart.css
@@ -66,7 +66,7 @@
 }
 .payroll-piechart{
     width: 300px;
-     /* height: 300px ; */
+     height: 300px ;
      background:#fff;
      margin:0 20px;
      border-radius:16px;
