--- a/src/pages/Signup/signup.css
+++ b/src/pages/Signup/signup.css
@@ -18,10 +18,9 @@
 }
 
 .image-signup img {
-    width: 400px;
-    float: left;
-    height: 100%;
-    margin-top: 25%;
+    width: 100%;
+    height: 80%;
+    /* margin-top: 10%; */
 
 }
 
@@ -57,7 +56,7 @@
     color: #2B3674;
     font: 15px;
     font-weight: 300px;
-    background-color: #F4F7FE;
+    background-color: #c7d8ff ;
     /* margin-left: 10%; */
 }
 
@@ -80,7 +79,7 @@ hr {
 }
 
 .form {
-    width: 450px;
+    width: auto;
 }
 
 .form h2 {
@@ -91,7 +90,7 @@ hr {
 }
 
 .form input {
-    width: 450px;
+    width: 100%;
     border-radius: 8px;
     padding: 14px 15px;
     margin-top: 10px;
@@ -107,12 +106,12 @@ hr {
 }
 
 .form .icon {
-    float: right;
     color: #E0E5F2;
-    z-index: 10;
+    float: right;
+    color: #A3AED0;
+    margin-top: 1.2rem;
+    margin-left: -2rem;
     position: absolute;
-    right: 12%;
-    bottom: 5%;
 }
 
 
@@ -152,7 +151,7 @@ hr {
 
 .form .text {
     margin-top: 25px;
-    color: #4318FF;
+    color: #2b3674;
     line-height: 16px;
     font-size: 20px;
 }
@@ -161,13 +160,13 @@ hr {
     color: #2B3674;
     font-weight: bold;
 }
-
+/* 
 .form .rights {
 
     float: right;
     margin-top: 15%;
     font-size: 20px;
-}
+} */
 
 /* @media(min-width:390px){
   .signup{
@@ -205,7 +204,10 @@ hr {
     img {
         width: 100%;
     }
-
+    .image-signup{
+        display: none;
+    }
+    
     .sign {
         margin-top: 38%;
         width: 100%;
@@ -221,18 +223,18 @@ hr {
         margin-left: 30px;
         margin: auto;
     } */
-    .form input {
+    /* .form input {
         width: 350px;
         margin: auto;
-    }
+    } */
 
     .sign h1, .sign p {
         text-align: center;
     }
 
-    .sign button {
+    /* .sign button {
         margin-left: 30px;
-    }
+    } */
 
     /* .button{
         width:350px;
